# esp32s3-idf-

./: .gitignore  CMakeLists.txt  README.md  convert_images.py  partitions-16MiB.csv  sdkconfig  summary.md  transform_ui.py
LED/main/: main.c
components/BSP/: CMakeLists.txt
components/BSP/LCD/: lcd.c  mipi_lcd.c  rgblcd.c
components/BSP/TOUCH/: gt9xxx.c  gt9xxx.h  touch.c  touch.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/APP/: lvgl_demo.c  lvgl_demo.h
main/BSP/: bsp_can.c  bsp_can.h  img_psram_loader.c  img_psram_loader.h
main/ui/: .eez-project-build  actions.c  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui_image_1.c  ui_image_batt.c  ui_image_fire.c  ui_image_logo.c  ui_image_n.c  ui_image_ns.c  ui_image_warn.c  vars.h
main/ui/jpeg/: acc_picture_png.c  acc_picture_png.h  ami_ui_board_png.h  eight_picture_png.c  eight_picture_png.h  foll_picture_png.c  foll_picture_png.h  image_descriptors.c  png_images.c  png_images.h
turtioal/: CMakeLists.txt
turtioal/BSP/: CMakeLists.txt
turtioal/BSP/EXIT/: exti.c  exti.h
turtioal/BSP/GPTIM/: gptim.c  gptim.h
turtioal/BSP/KEY/: key.c  key.h
turtioal/BSP/LED/: led.c  led.h
turtioal/BSP/UART/: uart.c  uart.h
turtioal/BSP/WDT/: wdt.c  wdt.h
turtioal/BSP/esptim/: esptim.c  esptim.h
turtioal/main/: CMakeLists.txt  main.c
ui/: screens.c  screens.h  styles.c  styles.h
